--- a/index.html
+++ b/index.html
@@ -139,20 +139,20 @@
             <h2 class="section-title">Featured <span>Project</span></h2>
             <div class="project-card">
                 <div class="project-image">
-                    <img src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80" alt="E-commerce Website">
+                    <img src="Screenshot (101).png" alt="E-commerce Website">
                 </div>
                 <div class="project-info">
-                    <h3>Modern E-commerce Platform</h3>
-                    <p>A fully responsive e-commerce website built with React, Node.js, and MongoDB. Features include product filtering, cart functionality, user authentication, and payment integration.</p>
+                    <h3>My Simple Website</h3>
+                    <p>A fully responsive website built with html, css, and js .</p>
                     <div class="project-tech">
-                        <span>React</span>
-                        <span>Node.js</span>
-                        <span>MongoDB</span>
-                        <span>Stripe API</span>
+                        <span>HTML</span>
+                        <span>CSS</span>
+                        <span>JS</span>
+                        
                     </div>
                     <div class="project-links">
                         
-                        <a href="#" class="btn btn-small btn-outline">View Code</a>
+                        <a href="https://leleyy04.github.io/ejtroy/" class="btn btn-small btn-outline">View Code</a>
                     </div>
                 </div>
             </div>
